add sidebar and header layout

--- a/index.html
+++ b/index.html
@@ -6,5 +6,98 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="layout-container">
+      <section class="sidebar">
+        <a class="dashboard-link">Dashboard</a>
+        <ul class="navbar-links1">
+          <li><a href="">Home</a></li>
+          <li><a href="">Profile</a></li>
+          <li><a href="">Messages</a></li>
+          <li><a href="">History</a></li>
+          <li><a href="">Tasks</a></li>
+          <li><a href="">Communities</a></li>
+        </ul>
+        <ul class="navbar-links2">
+          <li><a href="">Settings</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Privacy</a></li>
+        </ul>
+      </section>
+      <header>
+        <div class="header-bar">
+          <div class="search-bar">
+            <img src="" alt="search" />
+            <input type="text" />
+          </div>
+          <div class="profile-bar">
+            <img src="" alt="bell" />
+            <img src="" alt="profile" />
+            <span>Morgan Oakley</span>
+          </div>
+        </div>
+        <div class="greeting-section">
+          <img src="" alt="profile" />
+          <div class="greeting-container">
+            <span>Hi there,</span>
+            <span>Morgan Oakley (@morgan)</span>
+          </div>
+        </div>
+        <ul class="profile-links">
+          <li><a href="">New</a></li>
+          <li><a href="">Upload</a></li>
+          <li><a href="">Share</a></li>
+        </ul>
+      </header>
+      <main class="main-content">
+        <section class="projects">
+          <h1>Your Projects</h1>
+          <div class="project-cards">
+            <div class="card">
+              <h3>Bright Summer Day</h3>
+              <p>
+                The sun shines brightly over the peaceful park. A warm breeze
+                moves through the trees.
+              </p>
+            </div>
+            <div class="card">
+              <h3>Cold Winter Night</h3>
+              <p>
+                Snow covers the streets as the wind howls softly. The air feels
+                crisp and fresh.
+              </p>
+            </div>
+            <div class="card">
+              <h3>Quiet Forest Path</h3>
+              <p>
+                Leaves crunch underfoot while birds sing overhead. The scent of
+                pine fills the air.
+              </p>
+            </div>
+            <div class="card">
+              <h3>Endless Ocean Waves</h3>
+              <p>
+                The waves roll in rhythmically, touching the shore. Seagulls
+                call out in the distance.
+              </p>
+            </div>
+            <div class="card">
+              <h3>Golden Autumn Leaves</h3>
+              <p>
+                Orange and yellow leaves drift slowly to the ground. A cool wind
+                rustles through the trees.
+              </p>
+            </div>
+            <div class="card">
+              <h3>Midnight City Lights</h3>
+              <p>
+                Neon signs glow as cars rush through the streets. The city hums
+                with life and energy.
+              </p>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
