--- a/index.html
+++ b/index.html
@@ -15,22 +15,57 @@
   <body>
     <div class="page-wrapper">
       <section class="sidebar-section">
-        <span>Dashboard</span>
+        <span class="dashboard"
+          ><img src="./images/view-dashboard.svg" alt="" /> Dashboard</span
+        >
         <ul class="upper-dashboard-links">
-          <li>Home</li>
-          <li>Profile</li>
-          <li>Messages</li>
-          <li>History</li>
-          <li>Tasks</li>
-          <li>Communities</li>
+          <li>
+            <span><img src="./images/home.svg" alt="" />Home</span>
+          </li>
+          <li>
+            <span
+              ><img
+                src="./images/card-account-details-outline.svg"
+                alt=""
+              />Profile</span
+            >
+          </li>
+          <li>
+            <span><img src="./images/message-badge.svg" alt="" />Messages</span>
+          </li>
+          <li>
+            <span><img src="./images/clock-fill.svg" alt="" />History</span>
+          </li>
+          <li>
+            <span><img src="./images/note.svg" alt="" />Tasks</span>
+          </li>
+          <li>
+            <span
+              ><img src="./images/account-group.svg" alt="" />Communities</span
+            >
+          </li>
         </ul>
         <ul class="lower-dashboard-links">
-          <li>Settings</li>
-          <li>Support</li>
-          <li>Privacy</li>
+          <li>
+            <span><img src="./images/cog.svg" alt="" />Settings</span>
+          </li>
+          <li>
+            <span><img src="./images/file-question.svg" alt="" />Support</span>
+          </li>
+          <li>
+            <span><img src="./images/shield-account.svg" alt="" />Privacy</span>
+          </li>
         </ul>
       </section>
-      <header class="navbar-section"></header>
+      <header class="navbar-section">
+        <div class="top-half-nav">
+          <div class="search-container">
+            <img src="" alt="" />
+            <input type="text" />
+          </div>
+        </div>
+        <div class="bottom-half-nav"></div>
+      </header>
       <main class="main-content-section"></main>
     </div>
   </body>
