--- a/index.html
+++ b/index.html
@@ -13,60 +13,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="page-wrapper">
-      <section class="sidebar-section">
-        <span class="dashboard"
-          ><img src="./images/view-dashboard.svg" alt="" /> Dashboard</span
-        >
-        <ul class="upper-dashboard-links">
-          <li>
-            <span><img src="./images/home.svg" alt="" />Home</span>
-          </li>
-          <li>
-            <span
-              ><img
-                src="./images/card-account-details-outline.svg"
-                alt=""
-              />Profile</span
-            >
-          </li>
-          <li>
-            <span><img src="./images/message-badge.svg" alt="" />Messages</span>
-          </li>
-          <li>
-            <span><img src="./images/clock-fill.svg" alt="" />History</span>
-          </li>
-          <li>
-            <span><img src="./images/note.svg" alt="" />Tasks</span>
-          </li>
-          <li>
-            <span
-              ><img src="./images/account-group.svg" alt="" />Communities</span
-            >
-          </li>
-        </ul>
-        <ul class="lower-dashboard-links">
-          <li>
-            <span><img src="./images/cog.svg" alt="" />Settings</span>
-          </li>
-          <li>
-            <span><img src="./images/file-question.svg" alt="" />Support</span>
-          </li>
-          <li>
-            <span><img src="./images/shield-account.svg" alt="" />Privacy</span>
-          </li>
-        </ul>
-      </section>
-      <header class="navbar-section">
-        <div class="top-half-nav">
-          <div class="search-container">
-            <img src="" alt="" />
-            <input type="text" />
-          </div>
-        </div>
-        <div class="bottom-half-nav"></div>
-      </header>
-      <main class="main-content-section"></main>
-    </div>
+    <div class="sidebar-section"></div>
   </body>
 </html>
