--- a/index.html
+++ b/index.html
@@ -13,6 +13,150 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="sidebar-section"></div>
+    <div class="page-wrapper">
+      <section class="left-sidebar-section">
+        <div class="dashboard">
+          <img src="./images/view-dashboard.svg" alt="" />
+          <h4>Dashboard</h4>
+        </div>
+        <ul class="sidebar-upper-links">
+          <li class="sidebar-link">
+            <a href=""
+              ><img src="./images/home.svg" alt="" /><span>Home</span></a
+            >
+          </li>
+          <li class="sidebar-link">
+            <a href="">
+              <img
+                src="./images/card-account-details-outline.svg"
+                alt=""
+              /><span>Profile</span>
+            </a>
+          </li>
+          <li class="sidebar-link">
+            <a href=""
+              ><img src="./images/message-badge.svg" alt="" /><span
+                >Messages</span
+              ></a
+            >
+          </li>
+          <li class="sidebar-link">
+            <a href=""
+              ><img src="./images/clock-fill.svg" alt="" /><span
+                >History</span
+              ></a
+            >
+          </li>
+          <li class="sidebar-link">
+            <a href=""
+              ><img src="./images/note.svg" alt="" /><span>Tasks</span></a
+            >
+          </li>
+          <li class="sidebar-link">
+            <a href="">
+              <img src="./images/account-group.svg" alt="" /><span
+                >Communities</span
+              >
+            </a>
+          </li>
+        </ul>
+        <ul class="sidebar-lower-links">
+          <li class="sidebar-link">
+            <a href=""
+              ><img src="./images/cog.svg" alt="" /><span>Setting</span></a
+            >
+          </li>
+          <li class="sidebar-link">
+            <a href=""
+              ><img src="./images/file-question.svg" alt="" /><span
+                >Support</span
+              ></a
+            >
+          </li>
+          <li class="sidebar-link">
+            <a href=""
+              ><img src="./images/shield-account.svg " alt="" /><span
+                >Privacy</span
+              ></a
+            >
+          </li>
+        </ul>
+      </section>
+      <section class="navbar-section">
+        <div class="search-container">
+          <img src="./images/magnify.svg" alt="" />
+          <input type="text" />
+        </div>
+        <div class="profile-icons">
+          <img src="./images/bell-ring.svg" alt="" />
+          <img src="./images/account-circle.svg" alt="" />
+          <span>Morgan Oakley</span>
+        </div>
+        <div class="greeting">
+          <img src="./images/account-circle.svg" alt="" />
+          <h3 class="greeting-text">
+            <span class="hi">Hi there,</span><br />Morgan Oakley (@morgan)
+          </h3>
+        </div>
+        <div class="profile-links">
+          <a href="" class="profile-link">New</a
+          ><a href="" class="profile-link">Upload</a
+          ><a href="" class="profile-link">Share</a>
+        </div>
+      </section>
+      <section class="main-content-section">
+        <h2 class="your-projects">Your Projects</h2>
+        <div class="projects-container">
+          <div class="project">
+            <h4>Project One</h4>
+            <p>
+              This is the first project description. It includes some details
+              about what the project is about.
+            </p>
+          </div>
+
+          <div class="project">
+            <h4>Project Two</h4>
+            <p>
+              This is the second project description. It explains the purpose
+              and functionality of the project.
+            </p>
+          </div>
+
+          <div class="project">
+            <h4>Project Three</h4>
+            <p>
+              This project involves solving a problem using technology. It
+              provides useful features for users.
+            </p>
+          </div>
+
+          <div class="project">
+            <h4>Project Four</h4>
+            <p>
+              This project focuses on web development. It demonstrates skills in
+              HTML, CSS, and JavaScript.
+            </p>
+          </div>
+
+          <div class="project">
+            <h4>Project Five</h4>
+            <p>
+              This is a creative project with interesting features. It enhances
+              the user experience significantly.
+            </p>
+          </div>
+
+          <div class="project">
+            <h4>Project Six</h4>
+            <p>
+              This project is designed for efficiency. It optimizes performance
+              and improves usability.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="right-side-content"></section>
+    </div>
   </body>
 </html>
