--- a/index.html
+++ b/index.html
@@ -105,58 +105,108 @@
         </div>
       </section>
       <section class="main-content-section">
-        <h2 class="your-projects">Your Projects</h2>
-        <div class="projects-container">
+        <div class="main-content-headers">
+          <h2 class="projects-header">Your Projects</h2>
+          <h3 class="announcements-header">Announcements</h3>
+        </div>
+        <div class="projects">
           <div class="project">
-            <h4>Project One</h4>
-            <p>
-              This is the first project description. It includes some details
-              about what the project is about.
-            </p>
+            <div class="project-text">
+              <h4>Project One</h4>
+              <p>
+                This is the first project description. It includes some details
+                about what the project is about.
+              </p>
+            </div>
+            <div class="project-icons">
+              <img src="./images/star-plus-outline.svg" alt="" /><img
+                src="./images/eye-plus-outline.svg"
+                alt=""
+              /><img src="./images/share-variant-outline.svg" alt="" />
+            </div>
           </div>
 
           <div class="project">
-            <h4>Project Two</h4>
-            <p>
-              This is the second project description. It explains the purpose
-              and functionality of the project.
-            </p>
+            <div class="project-text">
+              <h4>Project Two</h4>
+              <p>
+                This is the second project description. It explains the purpose
+                and functionality of the project.
+              </p>
+            </div>
+            <div class="project-icons">
+              <img src="./images/star-plus-outline.svg" alt="" /><img
+                src="./images/eye-plus-outline.svg"
+                alt=""
+              /><img src="./images/share-variant-outline.svg" alt="" />
+            </div>
           </div>
 
           <div class="project">
-            <h4>Project Three</h4>
-            <p>
-              This project involves solving a problem using technology. It
-              provides useful features for users.
-            </p>
+            <div class="project-text">
+              <h4>Project Three</h4>
+              <p>
+                This project involves solving a problem using technology. It
+                provides useful features for users.
+              </p>
+            </div>
+            <div class="project-icons">
+              <img src="./images/star-plus-outline.svg" alt="" /><img
+                src="./images/eye-plus-outline.svg"
+                alt=""
+              /><img src="./images/share-variant-outline.svg" alt="" />
+            </div>
           </div>
 
           <div class="project">
-            <h4>Project Four</h4>
-            <p>
-              This project focuses on web development. It demonstrates skills in
-              HTML, CSS, and JavaScript.
-            </p>
+            <div class="project-text">
+              <h4>Project Four</h4>
+              <p>
+                This project focuses on web development. It demonstrates skills in
+                HTML, CSS, and JavaScript.
+              </p>
+            </div>
+            <div class="project-icons">
+              <img src="./images/star-plus-outline.svg" alt="" /><img
+                src="./images/eye-plus-outline.svg"
+                alt=""
+              /><img src="./images/share-variant-outline.svg" alt="" />
+            </div>
           </div>
 
           <div class="project">
-            <h4>Project Five</h4>
-            <p>
-              This is a creative project with interesting features. It enhances
-              the user experience significantly.
-            </p>
+            <div class="project-text">
+              <h4>Project Five</h4>
+              <p>
+                This is a creative project with interesting features. It enhances
+                the user experience significantly.
+              </p>
+            </div>
+            <div class="project-icons">
+              <img src="./images/star-plus-outline.svg" alt="" /><img
+                src="./images/eye-plus-outline.svg"
+                alt=""
+              /><img src="./images/share-variant-outline.svg" alt="" />
+            </div>
           </div>
 
           <div class="project">
-            <h4>Project Six</h4>
-            <p>
-              This project is designed for efficiency. It optimizes performance
-              and improves usability.
-            </p>
+            <div class="project-text">
+              <h4>Project Six</h4>
+              <p>
+                This project is designed for efficiency. It optimizes performance
+                and improves usability.
+              </p>
+            </div>
+            <div class="project-icons">
+              <img src="./images/star-plus-outline.svg" alt="" /><img
+                src="./images/eye-plus-outline.svg"
+                alt=""
+              /><img src="./images/share-variant-outline.svg" alt="" />
+            </div>
           </div>
         </div>
       </section>
-      <section class="right-side-content"></section>
     </div>
   </body>
 </html>
