add announcements section and content

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
             <div class="project-text">
               <h4>Project Four</h4>
               <p>
-                This project focuses on web development. It demonstrates skills in
-                HTML, CSS, and JavaScript.
+                This project focuses on web development. It demonstrates skills
+                in HTML, CSS, and JavaScript.
               </p>
             </div>
             <div class="project-icons">
@@ -178,8 +178,8 @@
             <div class="project-text">
               <h4>Project Five</h4>
               <p>
-                This is a creative project with interesting features. It enhances
-                the user experience significantly.
+                This is a creative project with interesting features. It
+                enhances the user experience significantly.
               </p>
             </div>
             <div class="project-icons">
@@ -194,8 +194,8 @@
             <div class="project-text">
               <h4>Project Six</h4>
               <p>
-                This project is designed for efficiency. It optimizes performance
-                and improves usability.
+                This project is designed for efficiency. It optimizes
+                performance and improves usability.
               </p>
             </div>
             <div class="project-icons">
@@ -206,6 +206,33 @@
             </div>
           </div>
         </div>
+        <div class="announcements">
+          <div class="announcement">
+            <h3>Site Maintenance</h3>
+            <p>
+              Vestibulum condimentum tellus lacus, in accumsan elit maximus ac.
+              Donec hendrerit sodales congue...
+            </p>
+          </div>
+
+          <div class="announcement">
+            <h3>Community Share Day</h3>
+            <p>
+              Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam
+              dictum accumsan porttitor...
+            </p>
+          </div>
+
+          <div class="announcement">
+            <h3>Updated Privacy Policy</h3>
+            <p>
+              Phasellus efficitur nisi eget elit consectetur, eget condimentum
+              ante auctor. Cras fringilla sagittis sem in mattis...
+            </p>
+          </div>
+        </div>
+        <h3 class="trending-header">Trending</h3>
+        <div class="trending"></div>
       </section>
     </div>
   </body>
