finish layout and content

--- a/index.html
+++ b/index.html
@@ -232,7 +232,28 @@
           </div>
         </div>
         <h3 class="trending-header">Trending</h3>
-        <div class="trending"></div>
+        <div class="trending-container">
+          <ul class="accounts">
+            <li>
+              <img src="./images/account-circle.svg" alt="" />
+              <div class="user-info">
+                <span>@tegan<br />World Peace Builder</span>
+              </div>
+            </li>
+            <li>
+              <img src="./images/account-circle.svg" alt="" />
+              <div class="user-info">
+                <span>@morgan<br />Super Cool Project</span>
+              </div>
+            </li>
+            <li>
+              <img src="./images/account-circle.svg" alt="" />
+              <div class="user-info">
+                <span>kendall<br />Life Changing App</span>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </div>
   </body>
